Se ajusta despliegue